[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/mob_2/standing.png" type="Texture" id=1]
[ext_resource path="res://Thrower.gd" type="Script" id=2]
[ext_resource path="res://ThrowerSprite.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 650, 0, 325, 591 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 325, 0, 325, 591 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 975, 0, 325, 591 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 325, 591 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1300, 0, 325, 591 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1950, 0, 325, 591 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2275, 0, 325, 591 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1625, 0, 325, 591 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "down_left",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "down_right",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "up_left",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "up_right",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 22.0
height = 41.0

[sub_resource type="CapsuleShape2D" id=15]
radius = 38.0
height = 76.0

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ThrowerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/path = NodePath("ThrowerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("ThrowerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Thrower" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="ThrowerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, -6 )
scale = Vector2( 0.255035, 0.252529 )
frames = SubResource( 5 )
animation = "down_right"
script = ExtResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 1, -5 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -5 )
shape = SubResource( 15 )

[node name="InvencibilityTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 16 )
anims/blink = SubResource( 17 )
anims/stop = SubResource( 18 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="InvencibilityTimer" to="." method="_on_InvencibilityTimer_timeout"]
